<resources>
    <string name="app_name">Chat</string>
    <string name="please_check_the_network_connection">Please check the network connection.</string>
    <string name="an_error_occurred_message">An error occurred: %1$s</string>
    <string name="an_error_occurred">An error occurred. Please try again.</string>
    <string name="data_error">Data error!</string>
    <string name="image_error">Load image error!</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="your_name">Your name</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="tv_please_enter_email">Please enter email address!</string>
    <string name="tv_invalid_email">Invalid email address!</string>
    <string name="tv_please_enter_password">Please enter password!</string>
    <string name="tv_please_enter_your_name">Please enter your name!</string>
    <string name="tv_invalid_confirm_password">Invalid confirm password!</string>
    <string name="tv_please_enter_name">Please enter name!</string>
    <string name="notification_channel_id">Chat Notification ID</string>
    <string name="search_for_name">Search for name…</string>
    <string name="search_message">Search message…</string>
    <string name="search_for_name_or_email">Search for name or email…</string>
    <string name="add_chat_room">New Chat Room</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="night_mode">Night Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="room_name">Enter room name</string>
    <string name="members">Members</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="created_room_successfully">Created successfully</string>
    <string name="updated_room_successfully">Updated successfully</string>
    <string name="txt_tap_again_to_exit">Tap again to exit</string>
    <string name="back">Back</string>
    <string name="add_member">Add member</string>
    <string name="reply">REPLY</string>
    <string name="you_message_has_been_sent">You message has been sent</string>
    <string name="i_love_u">I miss you…</string>
    <string name="image">[Image…]</string>
    <string name="video">[Video…]</string>
    <string name="audio">[Audio…]</string>
    <string name="has_member">(%1$d members)</string>
    <string name="loading">Loading…</string>
    <string name="creating">Creating…</string>
</resources>