<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_20"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_100"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/size_50"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/size_50"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_register"
        android:hint="@string/your_name"
        android:inputType="textCapWords"
        android:textCursorDrawable="@null"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="#A3A3A3"
        android:textSize="@dimen/text_14"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:textCursorDrawable="@null"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/bg_btn_register"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="#A3A3A3"
        android:textSize="@dimen/text_14" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/bg_btn_register"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="@dimen/margin_10"
        android:textSize="@dimen/text_14"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/bg_btn_register"
        android:hint="@string/password"
        android:textCursorDrawable="@null"
        android:inputType="textPassword"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="#A3A3A3"
        android:textSize="@dimen/text_14" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@null"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/bg_btn_register"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="#A3A3A3"
        android:textSize="@dimen/text_14"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="sans-serif-condensed-medium"
        android:minHeight="0dp"
        android:paddingHorizontal="@dimen/size_50"
        android:paddingVertical="@dimen/margin_15"
        android:text="@string/login"
        android:textColor="@color/color_white_green"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/bg_btn_register"
        android:paddingHorizontal="@dimen/margin_15"
        android:paddingVertical="@dimen/margin_7.5"
        android:text="@string/register"
        android:textColor="@color/color_white_green"
        android:textSize="@dimen/text_13" />
</LinearLayout>