<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/add_member"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_10"
        android:background="@drawable/bg_edit_text"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/search_for_name_or_email"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="@dimen/margin_10"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorHint"
        android:textSize="@dimen/text_15"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/colorBlack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSelectMember"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="sans-serif-condensed"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/margin_15"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/cancel"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:layout_marginVertical="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="sans-serif-condensed"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/margin_15"
            android:paddingVertical="@dimen/margin_10"
            android:text="@string/done"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>