<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/color_2"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/bg_btn_register"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/search_for_name_or_email"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/color_3"
        android:textSize="@dimen/text_15"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSelectMember"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginVertical="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:fontFamily="sans-serif-condensed"
            android:padding="@dimen/margin_10"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginVertical="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:fontFamily="sans-serif-condensed"
            android:padding="@dimen/margin_10"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" /></LinearLayout>
</LinearLayout>